--- a/seckill/src/main/resources/jdbc.properties
+++ b/seckill/src/main/resources/jdbc.properties
@@ -1,5 +1,6 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/seckill?useUnicode=true&characterEncoding=utf-8
-username=root
-password=xiaxunwu1996.
+mysql.user=root
+mysql.pwd=luoqi250
+
 
